--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="play_all">播放全部</string>
     <string name="music_count">共%1$d首</string>
     <string name="music_count1">（%1$d）</string>
-    <string name="collection_all">+收藏歌单</string>
-    <string name="cancel_collection_all">-取消收藏</string>
+    <string name="collection_all">收藏歌单</string>
+    <string name="cancel_collection_all">取消收藏</string>
     <string name="list_loop">列表循环</string>
     <string name="one_list_loop">单曲循环</string>
     <string name="random_list_loop">随机循环</string>
